apps/dana-share/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dana-share-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dana-share
  sessionAffinity: None
  type: ClusterIP
